Tweak node display
