# Server/Api/Git/GitUpstreamDataController.cs
@@ -4,28 +4,35 @@ using PrincipleStudios.ScaledGitApp.Git.ToolsCommands;
 
 namespace PrincipleStudios.ScaledGitApp.Api.Git;
 
-public class GitUpstreamDataController(IGitToolsCommandInvoker GitToolsPowerShell, IBranchTypeLookup ColorConfiguration) : GitUpstreamDataControllerBase
+public class GitUpstreamDataController(IGitToolsCommandInvoker gitToolsPowerShell, IBranchTypeLookup branchTypeLookup) : GitUpstreamDataControllerBase
 {
 
 	protected override async Task<GetUpstreamDataActionResult> GetUpstreamData()
 	{
-		var results = await GitToolsPowerShell.RunCommand(new GitUpstreamData());
+		var results = await gitToolsPowerShell.RunCommand(new GitUpstreamData());
 		var noUpstreams = results.SelectMany(r => r.Value.UpstreamBranchNames).Except(results.Keys);
 		return GetUpstreamDataActionResult.Ok((
 			from kvp in results
-			let type = ColorConfiguration.DetermineBranchType(kvp.Key)
+			let type = branchTypeLookup.DetermineBranchType(kvp.Key)
 			select new BranchConfiguration(
 				Name: kvp.Key,
 				Type: type.BranchType,
 				Color: type.Color,
-				Upstream: kvp.Value.UpstreamBranchNames.Select(n => new Branch(Name: n)),
+				Upstream: from upstream in kvp.Value.UpstreamBranchNames
+						  let upstreamType = branchTypeLookup.DetermineBranchType(upstream)
+						  select new Branch(
+							  Name: upstream,
+							  Type: upstreamType.BranchType,
+							  Color: upstreamType.Color
+						  ),
 				Downstream: from entry in results
 							where entry.Value.UpstreamBranchNames.Contains(kvp.Key)
-							select new Branch(Name: entry.Key)
+							let downstreamType = branchTypeLookup.DetermineBranchType(entry.Key)
+							select new Branch(Name: entry.Key, Color: downstreamType.Color, Type: downstreamType.BranchType)
 			)
 		).Concat(
 			from branchName in noUpstreams
-			let type = ColorConfiguration.DetermineBranchType(branchName)
+			let type = branchTypeLookup.DetermineBranchType(branchName)
 			select new BranchConfiguration(
 				Name: branchName,
 				Type: type.BranchType,
@@ -33,7 +40,8 @@ public class GitUpstreamDataController(IGitToolsCommandInvoker GitToolsPowerShel
 				Upstream: Enumerable.Empty<Branch>(),
 				Downstream: from entry in results
 							where entry.Value.UpstreamBranchNames.Contains(branchName)
-							select new Branch(Name: entry.Key)
+							let downstreamType = branchTypeLookup.DetermineBranchType(entry.Key)
+							select new Branch(Name: entry.Key, Color: downstreamType.Color, Type: downstreamType.BranchType)
 			)
 		));
 	}
